# digi2droid

./: .gitignore  .gitmodules  pyrightconfig.json
app/: .gitignore  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  gphoto_jni.cpp
app/app/src/main/java/je/ef/digi2droid/: DigicamUsb.kt  MainActivity.kt  UsbGphoto.kt
app/app/src/main/kotlin/: DigicamAdapter.kt  GphotoNative.kt
app/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/app/src/main/res/layout/: activity_main.xml  item_digicam.xml
app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/scripts/: build-libgphoto2-android.sh
backend/: .gitignore
backend/api/: .env.example  README.md  app.py  config.py  integrations.py  jobs.py  pipeline.py  requirements.txt  util.py
backend/hunyuan3d/: Dockerfile  README.md  handler.py  requirements.txt
backend/hunyuan3d/Hunyuan3D-2/hy3dgen/shapegen/: pipelines.py  utils.py
backend/scripts/: test_api.py
